--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Joshua Hones</h1>
-<p>tell me if  works</p>
+<p>Hi my name is Joshua Hones. I'm a senior at the College of Charleston studying Computer Information Systems. This will be my blog for my software engineering practicum.
+  Blog entries for CSCI 462 will go here from now on. I look forward to this class and learning more about software engineering. I am also excited to work
+  on the group project for the semester with my teamates Bradley Odac, Patrick McCabe, and Cormac Conahan.</p>
 </body>
 </html>
