--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 				<img src="headshot.png" class="img-thumbnail img-fluid mx-auto d-block" alt="head" height="400" width="330">
 				<p></p>
 				<p class="text-center"><code>emailaddress@email.com</code>
-				<p><a href="mailto:honesejl@g.cofc.edu" class="text-danger">Email</a></p>
-				<p><a href="https://www.linkedin.com/in/joshua-hones-7101881aa/" class="text-danger">LinkedIn</a></p>
-				<p><a href="https://github.com/jhones212" class="text-danger">GitHub</a></p>
+				<p><a href="mailto:honesejl@g.cofc.edu" class="text-danger text-center">Email</a></p>
+				<p><a href="https://www.linkedin.com/in/joshua-hones-7101881aa/" class="text-danger text-center">LinkedIn</a></p>
+				<p><a href="https://github.com/jhones212" class="text-center"><code>GitHub</code></a></p>
 				
 				<br><br><br><br><br><br><br><br>
 				
