--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 								<br><br><br><br><br>
 				<img src="headshot.png" class="img-thumbnail img-fluid mx-auto d-block" alt="head" height="400" width="330">
 				<p></p>
-				<p class="text-center"><a href="mailto:honesejl@g.cofc.edu" class="text-info">Email</a></p>
-				<p class="text-center"><a href="https://www.linkedin.com/in/joshua-hones-7101881aa/" class="text-info">LinkedIn</a></p>
-				<p class="text-center"><a href="https://github.com/jhones212" class="text-info">GitHub</a></p>
+				<p class="text-center"><a href="mailto:honesejl@g.cofc.edu" class="text-primary">Email</a></p>
+				<p class="text-center"><a href="https://www.linkedin.com/in/joshua-hones-7101881aa/" class="text-primary">LinkedIn</a></p>
+				<p class="text-center"><a href="https://github.com/jhones212" class="text-primary">GitHub</a></p>
 				
 				<br><br><br><br><br><br><br><br>
 				
