--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#"><pre class="font-weight-bolder">Bio</pre></a>
+					<a class="nav-link" href="#"><pre class="font-weight-bolder">Blog</pre></a>
 				</li>
 			<ul class="navbar-nav">
 				<li class="nav-item">
