--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				
 					
 				<p class="font-family-arial"><code>1.13.21 - Introduction</code><br><br>
-					Hello World! Thank you for visiting my blog. I will use this space to discuss my experiences in Dr. Jim Bowden's
+					Hello World! Thank you for visiting my blog. I will use this space to discuss my experiences in Dr. Jim Bowring's
 					sofware engineering course. This is my final semester at the College of Charleston. I am studying Computer Information Systems and hope to 
 					work in either the software industry or in renewable energy in some facet. This semester I am going to complete a project with several other
 					classmates working with open source software. My teamates are Bradley Odac, Patrick McCabe, and Cormac Conahan. Our group is using the name of
@@ -62,7 +62,7 @@
 					1) "Every good work of software starts by scratching a developer's personal itch."<br>
 					A motivated developer is a good developer. If the problem is something personal and interferes with the way a developer can use the software 
 					it is much more motivating. Imagine if your favorite game, sport statistic page, or tinder didn’t work properly. People will work hard to personally
-					benefit from bug fixing.<br<br>
+					benefit from bug fixing.<br<br><br><br>
 					2) "Good programmers know what to write. Great ones know what to rewrite."<br>
 					This is an example of the old expression “if it aint broke, don’t fix it.” When writing open source code you are provided 
 					with a foundation to build upon. There is no need to go in and destroy someone elses product to build yours over. Take what 
