--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 					you thinking about the benefits of inclusivity with product design and development. People seeking out bugs to fix and features to add produce 
 					better code than those doing it for work.<br><br> 
 
-					Raymond lists 19 lessons throughout the essay all of which could have their own summary but I’m just going to touch on a few(in non particular order)<br>
+					Raymond lists 19 lessons throughout the essay all of which could have their own summary but I’m just going to touch on a few(in non particular order)<br><br>
 					1) "Every good work of software starts by scratching a developer's personal itch."<br>
 					A motivated developer is a good developer. If the problem is something personal and interferes with the way a developer can use the software 
 					it is much more motivating. Imagine if your favorite game, sport statistic page, or tinder didn’t work properly. People will work hard to personally
 					benefit from bug fixing.<br<br><br><br>
-					2) "Good programmers know what to write. Great ones know what to rewrite."<br>
+					2) "Good programmers know what to write. Great ones know what to rewrite."<br><br>
 					This is an example of the old expression “if it aint broke, don’t fix it.” When writing open source code you are provided 
 					with a foundation to build upon. There is no need to go in and destroy someone elses product to build yours over. Take what 
 					they have and use it to develop what you envision. Waste as little as possible.<br><br>
 					3)"Treating your users as co-developers is your least-hassle route to rapid code improvement and effective debugging."<br>
-					4)"Given a large enough beta-tester and co-developer base, almost every problem will be characterized quickly and the fix obvious to someone."<br>
+					4)"Given a large enough beta-tester and co-developer base, almost every problem will be characterized quickly and the fix obvious to someone."<br><br>
 					I grouped these ones together because its really the essence of the essay in my opinion. When people use your software they are going to explore areas
 					you could never have thought of. They are going to find bugs. Lucky for you they are developers! Rapid code improvements will happen which will lead to 
 					less deep structural bugs. Your code is constantly exposed and getting improved. Embrace your users and especially your beta testers!<br><br>
