--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 					This is an example of the old expression “if it aint broke, don’t fix it.” When writing open source code you are provided 
 					with a foundation to build upon. There is no need to go in and destroy someone elses product to build yours over. Take what 
 					they have and use it to develop what you envision. Waste as little as possible.<br><br>
-					3)"Treating your users as co-developers is your least-hassle route to rapid code improvement and effective debugging."<br>
-					4)"Given a large enough beta-tester and co-developer base, almost every problem will be characterized quickly and the fix obvious to someone."<br><br>
+					3)"Treating your users as co-developers is your least-hassle route to rapid code improvement and effective debugging."/"Given a large enough beta-tester
+					and co-developer base, almost every problem will be characterized quickly and the fix obvious to someone."<br><br>
 					I grouped these ones together because its really the essence of the essay in my opinion. When people use your software they are going to explore areas
 					you could never have thought of. They are going to find bugs. Lucky for you they are developers! Rapid code improvements will happen which will lead to 
 					less deep structural bugs. Your code is constantly exposed and getting improved. Embrace your users and especially your beta testers!<br><br>
