--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					better code than those doing it for work.<br><br> 
 
 					Raymond lists 19 lessons throughout the essay all of which could have their own summary but I’m just going to touch on a few(in non particular order)<br><br>
-					1) "Every good work of software starts by scratching a developer's personal itch."<br>
+					1) "Every good work of software starts by scratching a developer's personal itch."<br><br>
 					A motivated developer is a good developer. If the problem is something personal and interferes with the way a developer can use the software 
 					it is much more motivating. Imagine if your favorite game, sport statistic page, or tinder didn’t work properly. People will work hard to personally
 					benefit from bug fixing.<br<br><br><br>
