--- a/index.html
+++ b/index.html
@@ -82,6 +82,26 @@
 				</p>
 					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder"> “...given enough eyeballs, all bugs are shallow.”</pre>
 					</p>
+			
+				<p class="font-family-arial"><code>1.20.21 - Reflections on open source in today's world</code><br><br>
+					<bold>DevOps culture with open source principles</bold>
+					One key way to keep devOps teams fully functional during this unprecedented time is by applying open source principles. This is not a new or novel concept but rather something that needs to be stressed during the pandemic. Some team members may be working from home for the first time while others have done it plenty of times. The key is to remain a cohesive unit. 
+
+There are two types of devOps teams, those that are hybrid and those that are fully remote. Each type has their own unique problems and advantages. A fully remote team can be more agile because they may be working in different time zones allowing them to take advantage of different delivery cycles. This could also pose a problem because they may not be able to meet as easily. A hybrid team may still have to attend useless meetings and struggle with deciding who works from home and who does not. 
+
+Some key components from the open source world that can be applied to devOps include focusing on community, collaboration, transparency, inclusive meritocracy, releasing early and often, and pivoting. With the current situation going on around the world fostering a sense of community brings a sense of normalcy to some people and allows them to forget the stress of the outside world. Working remotely presents a great opportunity to be transparent, with all project information and materials being centralized. This helps teams to make powerful and effective decisions and understand how they affect the whole team. DevOps teams must remember to be inclusive and hear all ideas, no matter who it may come from.
+
+A big key to remember is that successful remote teams need to be more agile than ever. This doesn’t just apply to software delivery but how your team communicates and collaborates. Teams need to be open to new ideas and willing to try new things.
+
+					<bold>DevOps vs Agile</bold>
+					Agile and devOps are distinct, even though people think they are one in the same because of their many similarities. The two software development models are not adversaires, they are just different schools of thought.
+
+Agile was officially started 20 years ago, after the release of the agile manifesto. Previously, most software development was some form of the waterfall model. The waterfall model was a linear track to development that worked well in manufacturing and engineering but was not the most effective method for software development. 
+
+Agile invites and embraces uncertainty. Agile is build around the idea of change, and reacting to change. Focus on delivering software frequently and building projects around motivated people. This includes lots of face to face meetings and code review. Teams must work together and be open, honest, and transparent with each other. 
+
+
+			</p>
 					
 					
 
