--- a/index.html
+++ b/index.html
@@ -102,6 +102,41 @@ Agile invites and embraces uncertainty. Agile is build around the idea of change
 
 
 			</p>
+			
+			<p class="font-family-arial"><code>2.4.21 - This bugs me</code><br><br>
+					GitHubs issues is bug tracker for sugar labs
+
+Sugarlabs, like many other current FOSS use the “issues” function of Github to track their bugs. Developers and users alike are free to report issues as well as feature suggestions and work on them. It seems that most bugs get attention relatively quickly, especially on the more active modules. While looking through the bug reports I was able to spot a few developers who were actively reporting bugs and responding to others reports. The most notable is a developer named “quozi”, but there are others who contribute consistently as well. 
+
+The oldest bug I was able to find was from late 2016. It seems that their was a real effort to find bugs by one developer in April 2017. In 3 days they opened ~7 new bug reports on various modules. 
+
+For the sake of this exercise I tried to focus on bugs that were in modules we had considered working on such as pippy, calculate, paint etc.
+
+The bugs I chose include:
+
+An svg rendering different colors on different systems
+
+	Reported by “quozi”. The report includes different systems in which an svg renders different colors. “Quozi” later comments more systems in which the svg renders different.
+
+Error with bouncing objects in the physics activity where larger objects bounce higher and higher
+
+	Bug reported by “quozi”. He walks through the steps to recreate the bug and than specifies the particular bug. No one has responded to this bug report.
+
+A feature request for stats at the end of the memorize activity
+
+	Feature request from “sanjaymaniam”, one of the more active developers of the project. He provides a nice explanation of what he would like the game to feature and why. No one has responded to this feature request.
+
+Pressing the up arrow in chat causes the cursor to disappear and any keystroke produce a beep
+
+	This bug was reported by “quozi” and has not been commented on by any other developers. Quozi provided a short summary of how to recreate the bug and the observed result vs the expected result.
+
+
+Sound button not working on 2 cars activity
+
+This was reported by “ayushnawai”  he posted a quick and summarizing title of his issue. He provided the error message as well. At the time of writing this has not been commented on by any other developers.
+
+
+				</p>
 					
 					
 
