--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder"> “...given enough eyeballs, all bugs are shallow.”</pre>
 					</p>
 			
-				<p class="font-family-arial"><code>1.27.21 - Reflections On Open Source In Today's World</code></p><br><br>
-					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder">Open Source in devOps</p>
+				<p class="font-family-arial"><code>1.27.21 - Reflections On Open Source In Today's World</code><br><br>
+					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder">Open Source in devOps</pre></p>
 					One key way to keep devOps teams fully functional during this unprecedented time is by applying open source principles. This is not a new or novel concept
 					but rather something that needs to be stressed during the pandemic. Some team members may be working from home for the first time while others have done
 					it plenty of times. The key is to remain a cohesive unit. There are two types of devOps teams, those that are hybrid and those that are fully remote. 
