--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					A big key to remember is that successful remote teams need to be more agile than ever. This doesn’t just apply to software delivery but how your team 
 					communicates and collaborates. Teams need to be open to new ideas and willing to try new things.<br><br>
 
-					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder">DevOps vs Agile</p>
+					<p class="text-center display-4 text-wrap"><pre class="text-center font-weight-bolder">DevOps vs Agile</pre></p>
 					Agile and devOps are distinct, even though people think they are one in the same because of their many similarities. The two software development models are not
 					adversaires, they are just different schools of thought. Agile was officially started 20 years ago, after the release of the agile manifesto. Previously, most 
 					software development was some form of the waterfall model. The waterfall model was a linear track to development that worked well in manufacturing and engineering 
@@ -117,36 +117,42 @@
 			</p>
 			
 			<p class="font-family-arial"><code>2.4.21 - This bugs me</code><br><br>
-					GitHubs issues is bug tracker for sugar labs
+				GitHubs issues is the bug tracker for sugar labs Sugarlabs, like many other current FOSS use the “issues” function of Github to track their bugs.
+				Developers and users alike are free to report issues as well as feature suggestions and work on them. It seems that most bugs get attention relatively 
+				quickly, especially on the more active modules. While looking through the bug reports I was able to spot a few developers who were actively reporting 
+				bugs and responding to others reports. The most notable is a developer named “quozi”, but there are others who contribute consistently as well. 
+				The oldest bug I was able to find was from late 2016. It seems that their was a real effort to find bugs by one developer in April 2017. In 3 days they opened
+				~7 new bug reports on various
+				modules.<br><br> 
 
-Sugarlabs, like many other current FOSS use the “issues” function of Github to track their bugs. Developers and users alike are free to report issues as well as feature suggestions and work on them. It seems that most bugs get attention relatively quickly, especially on the more active modules. While looking through the bug reports I was able to spot a few developers who were actively reporting bugs and responding to others reports. The most notable is a developer named “quozi”, but there are others who contribute consistently as well. 
+				For the sake of this exercise I tried to focus on bugs that were in modules we had considered working on such as pippy, calculate, paint etc.<br><br>
 
-The oldest bug I was able to find was from late 2016. It seems that their was a real effort to find bugs by one developer in April 2017. In 3 days they opened ~7 new bug reports on various modules. 
+				The bugs I chose include:<br><br>
 
-For the sake of this exercise I tried to focus on bugs that were in modules we had considered working on such as pippy, calculate, paint etc.
+				An svg rendering different colors on different systems<br><br>
 
-The bugs I chose include:
+				Reported by “quozi”. The report includes different systems in which an svg renders different colors. “Quozi” later comments more systems in which the svg
+				renders different.<br><br>
 
-An svg rendering different colors on different systems
+				Error with bouncing objects in the physics activity where larger objects bounce higher and higher<br><br>
 
-	Reported by “quozi”. The report includes different systems in which an svg renders different colors. “Quozi” later comments more systems in which the svg renders different.
+				Bug reported by “quozi”. He walks through the steps to recreate the bug and than specifies the particular bug. No one has responded to this bug report.<br><br>
 
-Error with bouncing objects in the physics activity where larger objects bounce higher and higher
+				A feature request for stats at the end of the memorize activity<br><br>
 
-	Bug reported by “quozi”. He walks through the steps to recreate the bug and than specifies the particular bug. No one has responded to this bug report.
+				Feature request from “sanjaymaniam”, one of the more active developers of the project. He provides a nice explanation of what he would like the game to feature 
+				and why. No one has responded to this feature request.<br><br>
 
-A feature request for stats at the end of the memorize activity
+				Pressing the up arrow in chat causes the cursor to disappear and any keystroke produce a beep<br><br>
 
-	Feature request from “sanjaymaniam”, one of the more active developers of the project. He provides a nice explanation of what he would like the game to feature and why. No one has responded to this feature request.
-
-Pressing the up arrow in chat causes the cursor to disappear and any keystroke produce a beep
-
-	This bug was reported by “quozi” and has not been commented on by any other developers. Quozi provided a short summary of how to recreate the bug and the observed result vs the expected result.
+				This bug was reported by “quozi” and has not been commented on by any other developers. Quozi provided a short summary of how to recreate the bug
+				and the observed result vs the expected result.<br><br>
 
 
-Sound button not working on 2 cars activity
+				Sound button not working on 2 cars activity<br><br>
 
-This was reported by “ayushnawai”  he posted a quick and summarizing title of his issue. He provided the error message as well. At the time of writing this has not been commented on by any other developers.
+				This was reported by “ayushnawai”  he posted a quick and summarizing title of his issue. He provided the error message as well. 
+				At the time of writing this has not been commented on by any other developers.
 
 
 				</p>
