--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				
 				
 								<br><br><br><br><br>
-				<img src="headshot.png" class="img-thumbnail img-fluid mx-auto d-block" alt="head" height="400" width="330">
+				<img src="1613497938986.jpeg" class="img-thumbnail img-fluid mx-auto d-block" alt="head" height="400" width="330">
 				<p></p>
 				<p class="text-center"><a href="mailto:honesejl@g.cofc.edu" class="text-primary">Email</a></p>
 				<p class="text-center"><a href="https://www.linkedin.com/in/joshua-hones-7101881aa/" class="text-primary">LinkedIn</a></p>
