--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 				
 			</p>
 
-			<p class="font-family-arial"><code>3.30.21 - Chapter 7 - User Interface Dev</code><br><br>
+			<p class="font-family-arial"><code>4.1.21 - Meeting Charleston</code><br><br>
 				The alumni symposium was very informative and interesting. It’s always nice hearing from people who have been in the situation us 
 				students are. Graduating is an exciting, nerve wracking, and confusing time. A lot of people may be searching for jobs, figuring out where 
 				they want to live, and the next step in their life. <br><br>
